# nvim_llm

./: .gitignore  README.md  example_config.json
lua/: lua
lua/nvim_llm/: .gitignore  example_config.json  init.lua
lua/nvim_llm/nvim_llm/: tinyllama.json
lua/nvim_llm/nvim_llm/src/: main.rs
nvim_llm_tool/: Cargo.toml  codellama.json  tinyllama.json
nvim_llm_tool/src/: main.rs
plugin/: nvim_llm.vim  plugin  themeinator.vim
