[package]
name = "nvim_llm"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.33", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.5.21", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0.93"
reqwest = {version = "0.12.9", features = ["json", "stream"] }
futures-util = "0.3.31"

